stream-helper/src/styles/MovieDetail.css
.mainMovieDetailContainer {
  margin-top: 5vh;
}

.movieDetailRatings {
  color: whitesmoke;
}

.movieDetailContent {
  position: absolute;
  color: whitesmoke;
  top: 30%;
  left: 45%;
  width: 500px;
}

.loadingMovieDetail {
  display: flex;
  position: absolute;
  left: 50%;
  top: 50%;
}

.movieDetailImageCard {
  height: 600px;
}

.movieDetailActionBox {
  border-radius: 10px;
  height: 70px;
  width: 410px;
}
.streamProviderBox {
  display: flex;
  flex-wrap: wrap;
  contain: content;
  width: 700px;
  height: 100px;
  border-radius: 10px;
  -moz-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
  -webkit-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
  box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
}

.streamProviderContainer {
  color: whitesmoke !important;
  height: 30%;
}

.movieDetailHeartIcon {
  margin-top: 15px;
  justify-content: center;
}

.movieDetailCast {
  display: flex;
  color: whitesmoke;
  width: 90%;
  height: 100px;
  overflow: auto;
  white-space: nowrap;
}
/* width */
/* ::-webkit-scrollbar {
  width: 20px;
} */

/* Track */
/* ::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
} */

/* Handle */
/* ::-webkit-scrollbar-thumb {
  background: rgb(241, 239, 239);
  border-radius: 10px;
} */

/* Handle on hover */
/* ::-webkit-scrollbar-thumb:hover {
  background: #b30000;
} */

.creditUniqueDetail {
  display: flex;
  margin-left: 50px !important;
  margin-right: 50px !important;
}

.unavailable {
  margin-left: 20px;
  margin-top: 20px;
}

/* IPHONE 5  */

@media only screen and (max-device-width: 375px) and (max-height: 570px) {
  body {
    min-height: 100vh;
    min-height: -webkit-fill-available;
  }

  html {
    height: -webkit-fill-available;
    width: -webkit-fill-available;
  }

  .mainMovieDetailContainer {
    margin-top: 5vh;
  }

  .movieDetailContent {
    position: absolute;
    color: whitesmoke;
    top: 180%;
    left: 5%;
    width: 250px;
  }

  .movieDetailContent h4 {
    font-size: 18px;
  }

  .loadingMovieDetail {
    display: flex;
    position: absolute;
    left: 50%;
    top: 50%;
  }

  .movieDetailImageCard {
    height: 300px;
    margin-left: 15%;
  }

  .movieDetailActionBox {
    border-radius: 10px;
    height: 70px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 60px;
    width: 200px;
  }
  .streamProviderBox {
    display: flex;
    flex-wrap: wrap;
    contain: content;
    width: 300px;
    overflow: scroll;
    height: auto;
    border-radius: 10px;
    -moz-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
    -webkit-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
    box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
  }

  .streamProviderContainer {
    color: whitesmoke !important;
    height: 30%;
  }
}

/* IPHONE 6/7/8 */

@media only screen and (min-device-width: 375px) and (min-height: 600px) and (max-height: 768px) {
  .movieDetailContent {
    position: absolute;
    color: whitesmoke;
    top: 165%;
    left: 15%;
    width: 250px;
  }

  .movieDetailContent h4 {
    font-size: 20px;
  }

  .loadingMovieDetail {
    display: flex;
    position: absolute;
    left: 50%;
    top: 50%;
  }

  .movieDetailImageCard {
    height: 300px;
    margin-left: 20%;
  }

  .movieDetailActionBox {
    border-radius: 10px;
    height: 70px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 60px;
    width: 200px;
  }
  .streamProviderBox {
    display: flex;
    flex-wrap: wrap;
    contain: content;
    width: 375px;
    overflow: scroll;
    height: auto;
    border-radius: 10px;
    -moz-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
    -webkit-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
    box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
  }

  .streamProviderContainer {
    color: whitesmoke !important;
    height: 30%;
  }
}

/* IPHONE X */

@media only screen and (min-device-width: 375px) and (min-height: 768px) and (max-height: 820px) {
  .movieDetailContent {
    position: absolute;
    color: whitesmoke;
    top: 130%;
    left: 15%;
    width: 250px;
  }

  .movieDetailContent h4 {
    font-size: 20px;
  }

  .loadingMovieDetail {
    display: flex;
    position: absolute;
    left: 50%;
    top: 50%;
  }

  .movieDetailImageCard {
    height: 300px;
    margin-left: 20%;
  }

  .movieDetailActionBox {
    border-radius: 10px;
    height: 70px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 60px;
    width: 200px;
  }
  .streamProviderBox {
    display: flex;
    flex-wrap: wrap;
    contain: content;
    width: 375px;
    overflow: scroll;
    height: auto;
    border-radius: 10px;
    -moz-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
    -webkit-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
    box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
  }

  .streamProviderContainer {
    color: whitesmoke !important;
    height: 30%;
  }
}

/* IPAD */

@media only screen and (min-device-width: 700px) and (max-width: 800px) and (min-height: 900px) and (max-height: 1024px) {
  .movieDetailContent {
    position: absolute;
    color: whitesmoke;
    top: 83%;
    left: 15%;
    width: 500px;
  }

  .movieDetailContent h4 {
    font-size: 20px;
  }

  .loadingMovieDetail {
    display: flex;
    position: absolute;
    left: 50%;
    top: 50%;
  }

  .movieDetailImageCard {
    height: 300px;
    margin-left: 1%;
  }

  .movieDetailActionBox {
    border-radius: 10px;
    height: 70px;
    margin-top: 20px;
    margin-bottom: 60px;
    width: 200px;
  }
  .streamProviderBox {
    display: flex;
    flex-wrap: wrap;
    contain: content;
    width: 375px;
    overflow: scroll;
    height: auto;
    border-radius: 10px;
    -moz-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
    -webkit-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
    box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
  }

  .streamProviderContainer {
    color: whitesmoke !important;
    height: 30%;
  }
}

/* IPAD PRO / SMALL LAPTOP */

@media only screen and (min-device-width: 1024px) and (max-width: 1200px) {
  .movieDetailContent {
    position: absolute;
    color: whitesmoke;
    top: 75%;
    left: 15%;
    width: 500px;
  }

  .movieDetailContent h4 {
    font-size: 20px;
  }

  .loadingMovieDetail {
    display: flex;
    position: absolute;
    left: 50%;
    top: 50%;
  }

  .movieDetailImageCard {
    height: 500px;
    margin-left: 1%;
  }

  .movieDetailActionBox {
    border-radius: 10px;
    height: 70px;
    margin-top: 20px;
    margin-bottom: 60px;
    width: 400px;
  }
  .streamProviderBox {
    display: flex;
    flex-wrap: wrap;
    contain: content;
    width: 475px;
    overflow: scroll;
    height: auto;
    border-radius: 10px;
    -moz-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
    -webkit-box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
    box-shadow: inset 0 0 10px rgba(208, 166, 0, 0.817);
  }

  .streamProviderContainer {
    color: whitesmoke !important;
    height: 30%;
  }
}

